Fixed overlapping additions over links in texts

--- a/CSS/ShapeStyle.css
+++ b/CSS/ShapeStyle.css
@@ -460,6 +460,10 @@ Footer {
 
     }
 
+    .leftAddition, .rightAddition{;
+        z-index: -10;
+    }
+
     .leftAddition{
         position: absolute;
         right: 55%;
